--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ Final Report/
 Image/
 
 # Ignore all lab-report files with .docx extension anywhere in the project
-lab-reports*.docx
+lab-report(format).docx
