--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignore Final Report folder
-Final Report/
 
 # Ignore Image folder
 Image/
+Images/
 
 # Ignore all lab-report files with .docx extension anywhere in the project
 lab-report(format).docx
